--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_phone_direct_caller: ^2.2.1
   flutter_contacts: ^1.1.9+2
   permission_handler: ^12.0.1
+  telephony: ^0.2.0
+  geolocator: ^12.0.0
 
 dev_dependencies:
   flutter_test:
