--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -34,5 +34,7 @@
 <string>This app needs access to your location to send it to your emergency contacts.</string>
 <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 <string>This app needs access to your location to send it to your emergency contacts.</string>
+<key>NSContactsUsageDescription</key>
+<string>This app needs access to your contacts so you can select them as emergency contacts.</string>
 </dict>
 </plist>
