--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -54,6 +54,15 @@
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>This app needs access to your location to send it to your emergency contacts during an SOS.</string>
 	<key>UIBackgroundModes</key>
+	<key>NSContactsUsageDescription</key>
+	<string>This app needs access to your contacts so you can select them as emergency contacts.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app needs access to your location to send it to your emergency contacts during an SOS.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This app needs access to your location to send it to your emergency contacts during an SOS.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app needs access to your location to send it to your emergency contacts during an SOS.</string>
+
 	<array>
 		<string>voip</string>
 	</array>
