--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   permission_handler: ^12.0.1
   telephony: ^0.2.0
   geolocator: ^12.0.0
-  flutter_phone_call_state: ^0.1.0
+  phone_state: ^2.1.1
 
 dev_dependencies:
   flutter_test:
