--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
 
     <application
-        android:label="SOS emergency"
+        android:label="SOS Emergency"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
